[package]
name = "ggos"
version = "0.1.0"
edition = "2021"
authors = ["GZTime <gz.time.walker@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
uefi = "0.14.0"
uefi-services = "0.11.0"
log = "0.4.14"
rlibc = "1.0.0"
