[workspace]
resolver = "2"
members = [
    "pkg/boot",
    "pkg/elf",
    "pkg/kernel",
    "pkg/syscall",
    "pkg/storage",
    "pkg/lib",
    "pkg/app/*"
]
exclude = ["pkg/app/config", "pkg/app/.cargo"]

[profile.release-with-debug]
debug = true
inherits = "release"

[workspace.dependencies]
bit_field = "0.10"
bitflags = "2.8"
hex-literal = "0.4"
libm = "0.2"
linked_list_allocator = "0.10"
log = "0.4"
lru = "0.13"
paste = "1.0"
pc-keyboard = "0.8"
rand_hc = "0.4"
spin = "0.9"
volatile = "0.6"
x86 = "0.52"
x86_64 = "0.15"
xmas-elf = "0.9"
uefi = { version = "0.33", default-features = false }
chrono = { version = "0.4", default-features = false }
arrayvec = { version = "0.7", default-features = false }
num_enum = { version = "0.7", default-features = false }
rand = { version = "0.9", default-features = false }
roaring = { version = "0.10", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
micromath = { version = "2.0", features = ["num-traits"] }
embedded-graphics = { version = "0.8", features = ["fixed_point"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }

# Local dependencies

lib = { path = "pkg/lib", package = "gglib" }
elf = { path = "pkg/elf", package = "ggos_elf" }
storage = { path = "pkg/storage", package = "ggos_storage" }
syscall_def = { path = "pkg/syscall", package = "ggos_syscall" }
boot = { path = "pkg/boot", default-features = false, package = "ggos_boot" }
