[package]
name = "ggos-boot"
version = "0.1.0"
edition = "2021"
authors = ["GZTime <gz.time.walker@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
bootloader = "0.10.12"
uefi = { version = "0.14.0", features = ["alloc"] }
uefi-services = "0.11.0"
log = "0.4.14"
