[package]
name = "ggos_boot"
version = "0.2.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", default-features = false }
uefi = { version = "0.32", default-features = false }
log = "0.4"
x86_64 = "0.15"
xmas-elf = "0.9"
elf = { package = "ggos_elf", path = "../elf" }

[features]
boot = ["uefi/alloc", "uefi/logger", "uefi/panic_handler", "uefi/global_allocator"]
default = ["boot"]
