[package]
name = "ggos_boot"
version = "0.2.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { workspace = true }
uefi = { workspace = true }
log = { workspace = true }
x86_64 = { workspace = true }
xmas-elf = { workspace = true }
elf = { workspace = true }

[features]
boot = ["uefi/alloc", "uefi/logger", "uefi/panic_handler", "uefi/global_allocator"]
default = ["boot"]
