[package]
name = "ggos_elf"
edition.workspace = true
version.workspace = true
authors.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
x86_64 = { workspace = true }
xmas-elf = { workspace = true }
