[package]
name = "ggfs"
version = "0.1.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.3.4"
paste = "1.0.7"
chrono = { version = "0.4.9", default-features = false, features = ["alloc"] }
bitflags = "1.3.2"
x86_64 = "0.14.0"
paste = "1.0.7"
