[package]
name = "ggfs"
version = "0.1.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.3.4"
paste = "1.0.9"
chrono = { version = "0.4.23", default-features = false, features = ["alloc"] }
bitflags = "1.3.2"
x86_64 = "0.14.10"
log = "0.4.17"
spin = "0.9.4"
num_enum = { version = "0.5.7", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_hc = "0.3.1"
