[package]
name = "ggfs"
version = "0.1.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4"
paste = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
bitflags = "2.0"
x86_64 = "0.14"
log = "0.4"
spin = "0.9"
num_enum = { version = "0.6", default-features = false }
rand = { version = "0.8", default-features = false }
rand_hc = "0.3"
