[package]
name = "ggos_kernel"
version = "0.9.7"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { path = "../boot", package = "ggos_boot", default-features = false }
fs = { path = "../fs", package = "ggfs" }
elf = { package = "ggos_elf", path = "../elf" }
embedded-graphics = { version = "0.7", features = ['fixed_point'] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
paste = "1.0"
spin = "0.9"
x86 = "0.52"
x86_64 = "0.14"
log = "0.4"
bit_field = "0.10"
micromath = { version = "2.0", features = ["num-traits"] }
bitflags = "2.0"
chrono = { version = "0.4", default-features = false }
libm = "0.2"
linked_list_allocator = "0.10"
pc-keyboard = "0.7"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
volatile = "0.4"
xmas-elf = "0.9"
num_enum = { version = "0.5", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
