[package]
name = "ggos_kernel"
edition.workspace = true
version.workspace = true
authors.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { workspace = true }
uefi = { workspace = true }
storage = { workspace = true }
elf = { workspace = true }
syscall_def = { workspace = true }
embedded-graphics = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
spin = { workspace = true }
x86 = { workspace = true }
x86_64 = { workspace = true }
log = { workspace = true }
bit_field = { workspace = true }
micromath = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
libm = { workspace = true }
linked_list_allocator = { workspace = true }
pc-keyboard = { workspace = true }
crossbeam-queue = { workspace = true }
volatile = { workspace = true }
xmas-elf = { workspace = true }
futures-util = { workspace = true }
roaring = { workspace = true }
lru = { workspace = true }
