[package]
name = "gglib"
version = "0.14.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscall_def = { package = "ggos_syscall", path = "../syscall" }
chrono = { version = "0.4", default-features = false }
linked_list_allocator = { version = "0.10", optional = true }

[features]
default = ["brk_alloc"]
kernel_alloc = []
brk_alloc = ["dep:linked_list_allocator"]
