[package]
name = "gglib"
version = "0.14.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscall_def = { workspace = true }
chrono = { workspace = true }
linked_list_allocator = { workspace = true, optional = true }

[features]
default = ["brk_alloc"]
kernel_alloc = []
brk_alloc = ["dep:linked_list_allocator"]
