[package]
name = "gglib"
edition.workspace = true
version.workspace = true
authors.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscall_def = { workspace = true }
chrono = { workspace = true }
linked_list_allocator = { workspace = true, optional = true }

[features]
default = ["brk_alloc"]
kernel_alloc = []
brk_alloc = ["dep:linked_list_allocator"]
