[package]
name = "ggos_storage"
version = "0.12.0"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = { workspace = true }
paste = { workspace = true }
chrono = { workspace = true, features = ["alloc"] }
bitflags = { workspace = true }
x86_64 = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
rand_hc = { workspace = true }
