[package]
name = "ggos_storage"
edition.workspace = true
version.workspace = true
authors.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = { workspace = true }
paste = { workspace = true }
chrono = { workspace = true, features = ["alloc"] }
bitflags = { workspace = true }
x86_64 = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
rand_hc = { workspace = true }
