[package]
name = "ggos_brk"
version = "0.0.1"
edition = "2021"
authors = ["GZTime <Time.GZ@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path="../../lib", package="gglib", default-features=false, features=["kernel_alloc"] }
