[package]
name = "ggos_brk"
edition.workspace = true
version.workspace = true
authors.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path="../../lib", package="gglib", default-features=false, features=["kernel_alloc"] }
