[package]
name = "ggos_clock"
edition.workspace = true
version.workspace = true
authors.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { workspace = true }
embedded-graphics = { version = "0.8", features = ['fixed_point'] }
micromath = { version = "2.0", features = ["num-traits"] }
chrono = { version = "0.4", default-features = false }
